# realworld

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  cabal.project  cabal.project.backend-in-mem  cabal.project.backend-rel8  cabal.project.frontend-js  cabal.project.frontend-vty  cabal.project.frontend-warp  default.nix  flake.nix  hie.yaml  pkgs.nix  realworld-haskell.cabal  shell.nix
.github/workflows/: backend-in-mem.yml  backend-rel8.yml  backend.yml  common.yml  frontend-js.yml  frontend-native.yml  frontend-vty.yml  frontend-warp.yml  frontend.yml  nix-build.yml  nix-develop.yml  shell.yml
backend/: .ghcid  services.el
backend/app/: Main.hs
backend/src/: Authentication.hs  Authorization.hs  Current.hs  CurrentTime.hs  GenID.hs  HTTP.hs  (+10 more)
frontend/: .ghcid
golden/: ArticleR "withAuthorProfile".json  ArticleWithAuthorProfile.json  AuthOf "user".json  CommentR "withAuthorProfile".json  CommentWithAuthorProfile.json  ContentOf "article".json  Out (ArticleR "withAuthorProfile").json  Out (CommentR "withAuthorProfile").json  Out (UserR "authWithToken").json  Out (UserR "profile").json  Out ArticleWithAuthorProfile.json  Out CommentWithAuthorProfile.json  Out UserAuthWithToken.json  Out UserProfile.json  Out [ArticleR "withAuthorProfile"].json  Out [ArticleWithAuthorProfile].json  Out [CommentR "withAuthorProfile"].json  Out [CommentWithAuthorProfile].json  Out [Tag].json  UserAuthWithToken.json  UserProfile.json  UserR "authWithToken".json  UserR "profile".json
nix/: pkgs.nix  sources.json
test/: .ghcid  Main.hs  Orphans.hs  Roundtrip.hs  StateMachine.hs
(+557 files in other folders)
